<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
<!-- Etape 3-->

    <item
        android:id="@+id/menu_cart"
        android:icon="@drawable/ic_menu_cart"
        android:title="@string/menu_cart"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_profile"/>
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_help"
        app:showAsAction="never"
        android:title="@string/menu_help"/>

</menu>